cmake_minimum_required(VERSION 3.25)
project(Task1B)

set(CMAKE_CXX_STANDARD 20)

add_executable(Task1B main.cpp
        action.cpp
        action.h
        book.cpp
        book.h
        camera.cpp
        camera.h
        chair.cpp
        chair.h
        CLI.cpp
        CLI.h
        clothes.cpp
        clothes.h
        CMakeLists.txt
        customer.cpp
        customer.h
        electronics.cpp
        electronics.h
        fictionbook.cpp
        fictionbook.h
        food.cpp
        food.h
        fruit.cpp
        fruit.h
        furniture.cpp
        furniture.h
        laptop.cpp
        laptop.h
        package.cpp
        package.h
        pants.cpp
        pants.h
        plane.cpp
        plane.h
        premadelunch.cpp
        premadelunch.h
        product.cpp
        product.h
        rpg.cpp
        rpg.h
        ship.cpp
        ship.h
        shipment.cpp
        shipment.h
        shipmentitem.cpp
        shipmentitem.h
        stock.cpp
        stock.h
        stockitem.cpp
        stockitem.h
        supplier.cpp
        supplier.h
        table.cpp
        table.h
        textbook.cpp
        textbook.h
        transport.cpp
        transport.h
        truck.cpp
        truck.h
        tshirt.cpp
        tshirt.h
        videogame.cpp
        videogame.h)
